# embedded

buildfiles/: All In One.uf2  All Tasks.uf2  All in One 3.uf2  Seperating Servo.uf2  buzzerOnly.uf2
src/: CMakeLists.txt  main.c
src/drivers/buzzerDriver/: buzzer.c  buzzer.h  buzzer_main.c
src/drivers/irDriver/: ir_sensor.c  ir_sensor.h  ir_sensor_main.c
src/drivers/lcdDriver/: lcd.c  lcd.h  lcd_main.c
src/drivers/rfidDriver/: mfrc522.h  rfid.c  rfid.h
src/drivers/servoDriver/: servo.c  servo.h  servo_main.c
src/drivers/ultrasonicDriver/: ultrasonic.c  ultrasonic.h  ultrasonic_main.c
